--- a/FriendFries/app/src/main/AndroidManifest.xml
+++ b/FriendFries/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HostActivity"></activity>
+        <activity android:name=".HostActivity" />
+        <activity android:name=".JoinActivity"></activity>
     </application>
 
 </manifest>
