--- a/FriendFries/app/src/main/AndroidManifest.xml
+++ b/FriendFries/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".HostActivity" />
         <activity android:name=".JoinActivity" />
-        <activity android:name=".RoomActivity"></activity>
+        <activity android:name=".RoomActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
