--- a/Unity/FriendFries Unity/Assembly-CSharp.csproj
+++ b/Unity/FriendFries Unity/Assembly-CSharp.csproj
@@ -46,6 +46,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\C#\DragFunctions.cs" />
+     <Compile Include="Assets\C#\MovingLeftRightByTouch.cs" />
+     <Compile Include="Assets\C#\PlayerDrag.cs" />
      <Compile Include="Assets\C#\PlayerSwipe.cs" />
      <Compile Include="Assets\C#\SwipeFunctions.cs" />
  <Reference Include="UnityEngine.UI">
