--- a/Unity/FriendFries Unity/Assembly-CSharp.csproj
+++ b/Unity/FriendFries Unity/Assembly-CSharp.csproj
@@ -46,9 +46,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\C#\DestroyOnContact.cs" />
+     <Compile Include="Assets\C#\DontGoThroughThings.cs" />
      <Compile Include="Assets\C#\DragFunctions.cs" />
      <Compile Include="Assets\C#\ExitWallTrigger.cs" />
      <Compile Include="Assets\C#\MovingLeftRightByTouch.cs" />
+     <Compile Include="Assets\C#\NewDragFunction.cs" />
      <Compile Include="Assets\C#\PlayerDrag.cs" />
      <Compile Include="Assets\C#\PlayerSwipe.cs" />
      <Compile Include="Assets\C#\SwipeFunctions.cs" />
