added random spawn for multiple fries in scene

--- a/FriendFries Unity/Assembly-CSharp.csproj
+++ b/FriendFries Unity/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Game C#\PinchFunction.cs" />
      <Compile Include="Assets\Game C#\PlayerDrag.cs" />
      <Compile Include="Assets\Game C#\PlayerSwipe.cs" />
+     <Compile Include="Assets\Game C#\SpawnObjects.cs" />
      <Compile Include="Assets\Game C#\SwipeFunctions.cs" />
      <Compile Include="Assets\Menu Scripts\ActiveStateToggler.cs" />
      <Compile Include="Assets\Menu Scripts\ApplicationManager.cs" />
