--- a/FriendFries Unity/Assembly-CSharp.csproj
+++ b/FriendFries Unity/Assembly-CSharp.csproj
@@ -46,11 +46,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Game C#\CheeseGrate.cs" />
      <Compile Include="Assets\Game C#\CollisionCounter.cs" />
      <Compile Include="Assets\Game C#\CountCaughtFries.cs" />
      <Compile Include="Assets\Game C#\DestroyOnContact.cs" />
      <Compile Include="Assets\Game C#\ExitWallTrigger.cs" />
-     <Compile Include="Assets\Game C#\GameStart.cs" />
      <Compile Include="Assets\Game C#\MovingLeftRightByTouch.cs" />
      <Compile Include="Assets\Game C#\NewDragFunction.cs" />
      <Compile Include="Assets\Game C#\PinchFunction.cs" />
