changed first scene to swiping potatoes, and added a loading scene? where the potatoes turn into fries. Also, fixed some bugs regarding score system

--- a/FriendFries Unity/Assembly-CSharp.csproj
+++ b/FriendFries Unity/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\Game C#\NewSwipeFunctions.cs" />
      <Compile Include="Assets\Game C#\PinchFunction.cs" />
      <Compile Include="Assets\Game C#\PlayerDrag.cs" />
+     <Compile Include="Assets\Game C#\PlayerNameList.cs" />
      <Compile Include="Assets\Game C#\PlayerSwipe.cs" />
      <Compile Include="Assets\Game C#\ScoreSystem.cs" />
      <Compile Include="Assets\Game C#\ShowNumPeople.cs" />
