added player names to game scenes. random names should appear every scene but so far only first scene works

--- a/FriendFries Unity/Assembly-CSharp.csproj
+++ b/FriendFries Unity/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\Game C#\PlayerDrag.cs" />
      <Compile Include="Assets\Game C#\PlayerSwipe.cs" />
      <Compile Include="Assets\Game C#\ScoreSystem.cs" />
+     <Compile Include="Assets\Game C#\ShowCurrPlayer.cs" />
      <Compile Include="Assets\Game C#\SpawnObjects.cs" />
      <Compile Include="Assets\Game C#\SwipeFunctions.cs" />
      <Compile Include="Assets\Menu Scripts\ActiveStateToggler.cs" />
